--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="flex items-center">
               <!-- Youtube -->
               <a
-                href="https://youtube.com/webprogrammingunpas"
+                href="https://www.youtube.com/@rizkimubarok1814"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -133,7 +133,7 @@
 
               <!-- Instagram -->
               <a
-                href="https://instagram.com/sandhikagalih"
+                href="https://www.instagram.com/bangmubarok3/"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -161,7 +161,7 @@
 
               <!-- TikTok -->
               <a
-                href="https://tiktok.com/@sandhika.galih"
+                href="https://www.tiktok.com/@bangmubarok3"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -175,7 +175,8 @@
 
               <!-- LinkedIn -->
               <a
-                href="https://linkedin.com/in/sandhikagalih"
+              href="https://www.linkedin.com/in/rizki-mubarok-500b42346/"                                                                                                                                                                                                                                                                                          <a
+                                                                                                                                                                                                                                                                                                             href="https://linkedin.com/in/sandhikagalih"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -201,7 +202,7 @@
             <h4 class="mb-2 text-lg font-semibold text-primary">Portfolio</h4>
             <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-5xl">Project Saya</h2>
             <p class="text-md font-medium text-secondary md:text-lg">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus porro consequuntur alias, commodi nemo enim aliquam ipsam obcaecati? Assumenda, ipsam?
+              Project ini buat untuk menambahkan ilmu dan skills yang saya miliki dan terus berproses
             </p>
           </div>
         </div>
@@ -382,7 +383,7 @@
           <div class="mb-5 flex items-center justify-center">
             <!-- Youtube -->
             <a
-              href="https://youtube.com/webprogrammingunpas"
+              href="https://www.youtube.com/@rizkimubarok1814"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -396,7 +397,7 @@
 
             <!-- Instagram -->
             <a
-              href="https://instagram.com/sandhikagalih"
+              href="https://www.instagram.com/bangmubarok3/"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -424,7 +425,7 @@
 
             <!-- TikTok -->
             <a
-              href="https://tiktok.com/@sandhika.galih"
+              href="https://www.tiktok.com/@bangmubarok3"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -438,7 +439,7 @@
 
             <!-- LinkedIn -->
             <a
-              href="https://linkedin.com/in/sandhikagalih"
+              href="https://www.linkedin.com/in/rizki-mubarok-500b42346/"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -451,8 +452,8 @@
             </a>
           </div>
           <p class="text-center text-xs font-medium text-slate-500">
-            Dibuat dengan <span class="text-pink-500">❤️</span> oleh <a href="https://instagram.com/sandhikagalih" target="_blank" class="font-bold text-primary">Rizki Mubarok</a>, menggunakan
-            <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS</a>.
+            Dibuat dengan <span class="text-pink-500">❤️</span> oleh <a href="https://www.instagram.com/bangmubarok3/" target="_blank" class="font-bold text-primary">Rizki Mubarok</a>, menggunakan
+            <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS dan belajar terinpirasi dari sandhika galih</a>.
           </p>
         </div>
       </div>
